--- a/style.css
+++ b/style.css
@@ -1,4 +1,122 @@
-*, html {
-    margin: 0;
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*,
+html {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+body {
+  background-image: url('assets/img/bg.png');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: 'Poppins', sans-serif;
+  margin: 0 5%;
+}
+
+.glass-wrap {
+  background: rgba(255, 255, 255, 0.11);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding: 1rem 2em;
+  width: fit-content;
+  margin-bottom: 1rem;
+}
+
+/* HEADER SECTION */
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+
+.logo-wrap > img {
+  width: 5rem;
+}
+
+.nav-wrap {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.nav-wrap > div {
+  margin-left: 30px;
+}
+
+.nav-wrap > div > a {
+  color: white;
+}
+
+/* HERO SECTION */
+.hero-section {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding: 20vh 0;
+  color: whitesmoke;
+  border-bottom: 1px solid rgba(173, 216, 230, 0.205);
+}
+
+.hero-title {
+  font-size: 4rem;
+  text-transform: uppercase;
+  text-shadow: 0 0 10px #ffffff;
+}
+
+.hero-btn-wrap {
+  display: flex;
+  justify-content: center;
+}
+
+.hero-btn-wrap > div {
+  padding: 15px 25px;
+  background: black;
+  margin: 20px 10px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.24);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+}
+
+.hero-btn-wrap > div > a {
+  color: aliceblue;
+}
+
+/* ABOUT US SECTION */
+.about-section {
+  padding: 3rem 0;
+  width: 80%;
+  margin: auto;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.about-left {
+  width: 40%;
+}
+
+.about-right {
+  width: 40%;
+}
+
+.brand-name {
+  color: rgb(255, 255, 255);
+  text-shadow: rgb(255, 162, 0) 0px 0px 11px;
+}
+
+.about-title {
+  font-size: 2rem;
 }
